--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,6 +14,9 @@ en:
             no_items_yet: There are no Locations yet. Click "Create a new Location" to add your first location.
           show:
             switch: Switch to Imports
+          records:
+            no_items_yet: There are no Locations yet. Click "Create a new Location" to add your first location.
+            no_results: 'Sorry, no results found'
         imports:
           index:
             create_new: Create a new Import
