--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,6 +17,9 @@ en:
           records:
             no_items_yet: There are no Locations yet. Click "Create a new Location" to add your first location.
             no_results: 'Sorry, no results found'
+          location:
+            edit: Edit this location
+            delete: Remove this location forever
         imports:
           index:
             create_new: Create a new Import
