--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,6 +14,7 @@ en:
             no_items_yet: There are no Locations yet. Click "Create a new Location" to add your first location.
           show:
             switch: Switch to Imports
+            switch2: Switch to Regions
           records:
             no_items_yet: There are no Locations yet. Click "Create a new Location" to add your first location.
             no_results: 'Sorry, no results found'
@@ -29,6 +30,24 @@ en:
             no_items_yet: There are no Imports yet. Click "Create a new Import" to add your first import.
           show:
             switch: Switch to Locations
+        regions:
+          index:
+            create_new: Create a new Region
+            reorder: Reorder Regions
+            reorder_done: Done Reordering Regions
+            sorry_no_results: Sorry! There are no results found.
+            no_items_yet: There are no Regions yet. Click "Create a new Region" to add your first region.
+          show:
+            switch: Switch to Locations 
+          records:
+            no_items_yet: There are no Regions yet. Click "Create a new Region" to add your first region.
+            no_results: 'Sorry, no results found'
+          region:
+            edit: Edit this region
+            delete: Remove this region forever             
+          actions:
+            reorder: Reorder Regions
+            reorder_done: Done Reordering Regions
       location:
         view_live: View this location live <br/><em>(opens in a new window)</em>
         edit: Edit this location
