validating presence of region on location and making locations dependent of region existence

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -48,6 +48,8 @@ en:
           actions:
             reorder: Reorder Regions
             reorder_done: Done Reordering Regions
+          messages:
+            deletion_warning: "WARNING: all locations associated with \nthis region will also be deleted."
       location:
         view_live: View this location live <br/><em>(opens in a new window)</em>
         edit: Edit this location
